test-policies-pass/validating/deprecated-api-warn/tests/deprecated-api.ingress-class-annotation.warn.object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legacy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 80
