test-policies-pass/validating/deprecated-api-warn/tests/deprecated-api.ingress-class-annotation.warn.warnings.txt
The kubernetes.io/ingress.class annotation is deprecated. Set spec.ingressClassName: nginx instead
