test-policies-pass/validating/deprecated-api-warn/tests/deprecated-api.ingress-class-name.allow.object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: current-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: web
      port:
        number: 80
