test-policies-pass/validating/deprecated-api-warn/tests/deprecated-api.old-version.warn.object.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: old-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx
